   gracefully quit.

 - The help file now contains all functions in the library, including
   internal ones.

 - A new configuration flag, --with-signed-zero, determines whether ECL supports
   IEEE 754 signed zeros

 - EXT:RUN-PROGRAM now returns two values: the two way stream and the exit code
   of the process if :WAIT is T (Josh Elsasser)

* Embedding:

 - ECL now implements a more transparent interface for setting and querying
   options related to signal trapping, stack sizes and general behavior. These
   are options that should be set before calling cl_boot() to customize later
   behavior. It does not make sense to change them at run time. The current
   list of options is set with ecl_set_option(code, value) and queried with
   ecl_get_option(code):
	ECL_OPT_INCREMENTAL_GC,
	ECL_OPT_TRAP_SIGSEGV,
	ECL_OPT_TRAP_SIGFPE,
	ECL_OPT_TRAP_SIGINT,
	ECL_OPT_TRAP_SIGILL,
	ECL_OPT_TRAP_SIGBUS,
	ECL_OPT_BOOTED, /* read only */
	ECL_OPT_BIND_STACK_SIZE,
	ECL_OPT_BIND_STACK_SAFETY_AREA,
	ECL_OPT_FRAME_STACK_SIZE,
	ECL_OPT_FRAME_STACK_SAFETY_AREA,
	ECL_OPT_LISP_STACK_SIZE,
	ECL_OPT_LISP_STACK_SAFETY_AREA,
	ECL_OPT_C_STACK_SIZE,
	ECL_OPT_C_STACK_SAFETY_AREA,
	ECL_OPT_SIGALTSTACK_SIZE,
	ECL_OPT_LIMIT

* Bugs fixed:

 - The optimizer for COERCE might enter an infinite loop for certain
   type intervals.

 - The sharp macros #n# and #n=... did not work well with arrays of an
   specialized type.

 - Deactivate --enable-asmapply by default, because it is still an experimental
   feature.

 - In compiled files, externalize package objects using FIND-PACKAGE.

 - In RUN-PROGRAM, there were two bugs: first, the keyword :WAIT was not
   defined in the C core and caused an error when used; second, if the output
   stream was missing or directed to the standard output, it would fail.

 - SI:LOAD-FOREIGN-MODULE does not coerce the library name to a truename
   before loading. Instead, it leaves this task to the appropriate routine,
   dlopen or similar.
